fixing header icon alignment

--- a/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
+++ b/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
@@ -26,8 +26,9 @@
   thead {
     background-color: $grayLighter;
 
-    th {
+    tr, th {
       padding: 4px 8px;
+      vertical-align: middle;
     }
 
     td {
